Fix alignment on top links. Fix case when window is smaller than the project view's min-height

--- a/pillar-web/src/styles/_project.sass
+++ b/pillar-web/src/styles/_project.sass
@@ -24,6 +24,7 @@ $list-node-children-item-width: 160px
 	width: 100%
 	/* So we have *some* page scroll, inside it uses perfectscrollbar */
 	overflow: hidden
+	min-height: 500px
 
 #project-nav,
 #project_context-container
