--- a/pillar-web/src/styles/main.sass
+++ b/pillar-web/src/styles/main.sass
@@ -161,16 +161,16 @@ header.navbar-header
 				size: 1.3em
 			border-bottom: 3px solid transparent
 			text-shadow: 1px 1px 0 rgba(black, .2), 1px 1px 10px rgba(black, .2)
-			transition: background-color 150ms ease-in, border-color 150ms ease-in, height 150ms ease-in
+			transition: all 150ms ease-in-out
 
 			padding:
-				top: 5px
-				bottom: 5px
+				top: 3px
+				bottom: 0
 				left: 20px
 				right: 20px
 
 			&:hover
-				background-color: rgba(white, .4)
+				background-color: rgba($color-background-nav, .4)
 				border-bottom: 3px solid $color-primary
 
 			&.active
@@ -199,7 +199,7 @@ header.navbar-header
 		margin-left: 0 !important
 		text-shadow: 1px 1px 0 rgba(black, .2), 1px 1px 10px rgba(black, .2)
 		padding:
-			top: 10px
+			top: 8px
 			left: 15px
 			right: 20px // overrides bs
 		color: white
@@ -225,7 +225,7 @@ header.navbar-header
 		min-width: 60px
 
 		&:hover
-			background-color: rgba(white, .4)
+			background-color: rgba($color-background-nav, .4)
 
 		span.fa-stack
 			position: absolute
